tests/a/tests/integrity/fail/let/let.0.stderr
error: expected {bin}{bin}, found {bin}{b,bin}
  --> tests/integrity/fail/let/let.0.rs:10:13
   |
10 |     let y = x;
   |             ^
